@@ -1,6 +1,5 @@
 package net.thisptr.jackson.jq.v2.core.version;
 
-import java.util.Arrays;
 import java.util.List;
 
 import net.thisptr.jackson.jq.v2.spi.version.Version;
@@ -22,7 +21,7 @@ public class Versions {
 	public static final Version JQ_1_8_2 = Version.valueOf("1.8.2");
 
 	public static List<Version> versions() {
-		return Arrays.asList(JQ_1_5, JQ_1_6, JQ_1_7, JQ_1_7_1, JQ_1_8_0, JQ_1_8_1, JQ_1_8_2);
+		return List.of(JQ_1_5, JQ_1_6, JQ_1_7, JQ_1_7_1, JQ_1_8_0, JQ_1_8_1, JQ_1_8_2);
 	}
 
 	private Versions() {
