@@ -2,7 +2,6 @@ package net.thisptr.jackson.jq.v2.core.internal;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
@@ -32,9 +31,9 @@ public class JsonQueryFunctionTest {
 		ObjectMapper mapper = new ObjectMapper();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_5).build();
 
-		assertThat(eval(env, "def inc(x): x + 1; inc(1)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("2")));
-		assertThat(eval(env, "def fib(x): if x == 0 then 0 elif x == 1 then 1 else fib(x-1) + fib(x-2) end; fib(5)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("5")));
-		assertThat(eval(env, "def id(x):x; 2000 as $x | def f(x):1 as $x | id([$x, x, x]); def g(x): 100 as $x | f($x,$x+x); g($x)", mapper.readTree("\"more testing\""))).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("[1,100,2100,100,2100]")));
+		assertThat(eval(env, "def inc(x): x + 1; inc(1)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("2")));
+		assertThat(eval(env, "def fib(x): if x == 0 then 0 elif x == 1 then 1 else fib(x-1) + fib(x-2) end; fib(5)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("5")));
+		assertThat(eval(env, "def id(x):x; 2000 as $x | def f(x):1 as $x | id([$x, x, x]); def g(x): 100 as $x | f($x,$x+x); g($x)", mapper.readTree("\"more testing\""))).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("[1,100,2100,100,2100]")));
 	}
 
 	@Test
@@ -42,7 +41,7 @@ public class JsonQueryFunctionTest {
 		ObjectMapper mapper = new ObjectMapper();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_5).build();
 
-		assertThat(eval(env, "def a($x): def b: def c: $x; c; b; a(1)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("1")));
+		assertThat(eval(env, "def a($x): def b: def c: $x; c; b; a(1)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("1")));
 	}
 
 	@Test
@@ -50,7 +49,7 @@ public class JsonQueryFunctionTest {
 		ObjectMapper mapper = new ObjectMapper();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_5).build();
 
-		assertThat(eval(env, "def a(f): def b: def c: f; c; b; a(1+1)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("2")));
+		assertThat(eval(env, "def a(f): def b: def c: f; c; b; a(1+1)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("2")));
 	}
 
 	@Test
@@ -58,7 +57,7 @@ public class JsonQueryFunctionTest {
 		ObjectMapper mapper = new ObjectMapper();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_5).build();
 
-		assertThat(eval(env, "def outer: def fact: if . <= 1 then 1 else . * ((. - 1) | fact) end; 5 | fact; outer", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("120")));
+		assertThat(eval(env, "def outer: def fact: if . <= 1 then 1 else . * ((. - 1) | fact) end; 5 | fact; outer", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("120")));
 	}
 
 	@Test
@@ -66,7 +65,7 @@ public class JsonQueryFunctionTest {
 		ObjectMapper mapper = new ObjectMapper();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_5).build();
 
-		assertThat(eval(env, "def outer($a): def inner: $a; inner, (2 as $b | $b); outer(5)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("5"), mapper.readTree("2")));
+		assertThat(eval(env, "def outer($a): def inner: $a; inner, (2 as $b | $b); outer(5)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("5"), mapper.readTree("2")));
 	}
 
 	@Test
@@ -74,7 +73,7 @@ public class JsonQueryFunctionTest {
 		ObjectMapper mapper = new ObjectMapper();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_5).build();
 
-		assertThat(eval(env, "\"a\" as $x | {\"a\": 1} as {($x): $x} | $x", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("1")));
+		assertThat(eval(env, "\"a\" as $x | {\"a\": 1} as {($x): $x} | $x", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("1")));
 	}
 
 	@Test
@@ -82,8 +81,8 @@ public class JsonQueryFunctionTest {
 		ObjectMapper mapper = new ObjectMapper();
 		Environment<JsonNode> env = EnvironmentBuilder.withDefaultLoaders(Jackson2JsonProvider.getInstance(), Versions.JQ_1_5).build();
 
-		assertThat(eval(env, "reduce [[1,2],[3,4]][] as [$a,$b] (0; . + $a + $b)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("10")));
-		assertThat(eval(env, "[foreach [[1,2],[3,4]][] as [$a,$b] (0; . + $a + $b)]", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(Arrays.asList(mapper.readTree("[3,10]")));
+		assertThat(eval(env, "reduce [[1,2],[3,4]][] as [$a,$b] (0; . + $a + $b)", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("10")));
+		assertThat(eval(env, "[foreach [[1,2],[3,4]][] as [$a,$b] (0; . + $a + $b)]", NullNode.getInstance())).usingElementComparator(BY_JQ_VALUE).isEqualTo(List.of(mapper.readTree("[3,10]")));
 	}
 
 	public static List<JsonNode> eval(Environment<JsonNode> env, String q, JsonNode in) throws JsonQueryException {
